k8s/deployment-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-web
  template:
    metadata:
      labels:
        app: portal-web
    spec:
      containers:
      - name: portal
        image: calvinlogins/portal-image:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: portal-service
spec:
  selector:
    app: portal-web
  ports:
  - port: 80
    targetPort: 5000
